# skillmux

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md  README_CN.md  build.rs  pyproject.toml
.github/workflows/: publish.yml
legacy/skillhub/: cli.py
legacy/skillhub/commands/: config.py  install.py  remove.py  search.py  update.py
legacy/skillhub/core/: __init__.py  api_client.py
legacy/skillhub/utils/: reference.py
packaging/debian/: control  copyright  rules
packaging/winget/: ZackZhu.SkillMux.installer.yaml  ZackZhu.SkillMux.locale.en-US.yaml  ZackZhu.SkillMux.yaml
scripts/: release.cmd  release.ps1  release.py
scripts/packaging/: package-release-asset.py  prepare-ppa-source.sh  update-homebrew-formula.py
skillhub/: __init__.py  __main__.py  cli.py
skillhub/commands/: __init__.py  config.py  install.py  list_cmd.py  remove.py  update.py
skillhub/core/: config.py  storage.py
skillhub/utils/: __init__.py  console.py
skills/install-skill/: SKILL.md
src/: api.rs  cli.rs  config.rs  installer.rs  main.rs  skill_manifest.rs  storage.rs
src/commands/: config.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  update.rs
src/git_backend/: git2_backend.rs  gix.rs  mod.rs
src/sources/: clawhub.rs  github.rs  kingdee.rs  mod.rs
