[package]
name = "skillmux"
version = "3.2.2"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
zip = "2"
walkdir = "2"
tempfile = "3"
git2 = { version = "0.20", default-features = false, features = ["https", "vendored-libgit2", "vendored-openssl"] }

[build-dependencies]
anyhow = "1"

[[bin]]
name = "skillmux"
path = "src/main.rs"
