[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "kdskillhub-zack"
version = "2.0.2"
description = "KDSkillHub CLI (Rust core)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Kingdee AI Team" }, { name = "Zack Zhu" }]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://skills.kingdee.com"
Repository = "https://github.com/zack-zzq/kdskillhub"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
sdist-generator = "cargo"
