[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "skillmux"
version = "3.1.1"
description = "A fast multi-source, multi-target skill manager."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Kingdee AI Team" }, { name = "Zack Zhu" }]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://skills.kingdee.com"
Repository = "https://github.com/zack-zzq/skillmux"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
sdist-generator = "cargo"
